# VibesPro

./: .alt.coderabbit.yml  .coderabbit.yaml  .coderabbit.yml  .copierignore  .editorconfig  .env.example  .gitignore  .mise.toml  .nxignore  .pre-commit-config.yaml  .prettierignore  .secrets.env.sops  .sops.yaml  AGENT-MAP.md  AGENT-SYSTEM.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  CRITICAL_SECURITY_REMEDIATION_SUMMARY.md  Cargo.toml  ESLINT_STRICT_MODE_TASK.md  PHASE-002-COMPLETION-REPORT.md  PHASE-002-COMPLETION-SUMMARY.md  PHASE-003-COMPLETION-SUMMARY.md  PHASE-003-FINAL-SUMMARY.md  PRODUCT.md  README.md  RELEASE_NOTES_v0.5.0.md  THIRD_PARTY_LICENSES.md  _template_AGENTS.md  ce.manifest.jsonc  copier.yml  devbox.json  eslint.base.config.cjs  eslint.config.cjs  jest.config.json  justfile  manual_git_history_cleanup.md  (+13 more)
.agent/workflows/: generator-create.md
.devbox/overlays/: supabase.nix
.gemini/: settings.json.orig
.github/: AGENT.md  copilot-instructions.md  dependabot.yml  models.yaml
.github/agents/: AGENT_TEMPLATE.md  Coder.agent.md  DeepResearch.agent.md  SubAgentOrchestrator.agent.md  api.agent.md  context.curator.agent.md  debug.fix.agent.md  debug.isolate.agent.md  debug.refactor.agent.md  debug.regress.agent.md  debug.repro.agent.md  debug.start.agent.md  dev-deploy.agent.md  docs.agent.md  implementer.core.agent.md  lint.agent.md  mcp.orchestrator.agent.md  onboarding.overview.agent.md  orchestrator.agent.md  persona.navigator.agent.md  persona.qa.agent.md  persona.senior-backend.agent.md  persona.senior-frontend.agent.md  persona.system-architect.agent.md  persona.ux-ui-designer.agent.md  persona.ux-ui.agent.md  planner.core.agent.md  planning.plan.agent.md  platform.target-platforms.agent.md  product.manager.agent.md  reviewer.core.agent.md  sec.analyst.agent.md  security.agent.md  spec.author.agent.md  spec.lean.agent.md  spec.nfr.agent.md  spec.wide.agent.md  tdd.green.agent.md  tdd.red.agent.md  tdd.refactor.agent.md  (+2 more)
.github/ce/: manifest-schema.md  routing-rules.md  vocab.md
.github/chatmodes/: debug.isolate.chatmode.md  tdd.vibepro.chatmode.md
.github/config/: versions.env
.github/instructions/: agents.instructions.md  ai-workflows.constitution.instructions.md  ai-workflows.instructions.md  architecture.instructions.md  ci-workflow.instructions.md  commit-msg.instructions.md  debugging.instructions.md  documentation.instructions.md  environment.instructions.md  general.instructions.md  generators-first.instructions.md  hexagonal-architecture.instructions.md  logging.instructions.md  performance.instructions.md  refactoring.instructions.md  sdd_constitution.instructions.md  security.instructions.md  skills.instructions.md  src.instructions.md  style.frontend.instructions.md  temporal-db.instructions.md  testing.instructions.md
.github/prompts/: add-artifact.prompt.md  create-plan.prompt.md  debug-routing.prompt.md  debug.ci.prompt.md  debug.workflow.prompt.md  docs.generate.prompt.md  extract-requirements.prompt.md  fix-ci.prompt.md  generator.create.prompt.md  (+28 more)
apps/: AGENT.md
architecture/: AGENT.md
context-kit/: AGENTS.md  ARCHITECTURE.md  CONTEXT-KIT.md  CONTRIBUTING.md  PRODUCT.md  ce.manifest.jsonc  copilot_instructions.md  plan-template.md
crates/: ARC.md
crates/arc-cli/: Cargo.toml
crates/arc-cli/src/: lib.rs  machine_ui_writer.rs  retro_tui.rs  theme.rs  tui.rs  ui_writer_impl.rs
crates/arc-cli/tests/: coach_feedback_extraction_test.rs
crates/arc-planner/: Cargo.toml
crates/arc-planner/src/: git.rs  history.rs  lib.rs  llm.rs  planner.rs  prompts.rs  state.rs
crates/arc-planner/tests/: commit_history_ordering_test.rs  logging_test.rs  planner_test.rs  retry_feedback_test.rs
crates/temporal-ai/: Cargo.toml  README.md  check_output.txt
crates/temporal-ai/examples/: test_embedder.rs
crates/temporal-ai/src/: embedder.rs  lib.rs  observability_aggregator.rs  pattern_extractor.rs  ranker.rs  schema.rs  similarity.rs  vector_store.rs
crates/temporal-ai/tests/: observability_tests.rs
docker/: .env.supabase.example  docker-compose.mocks.yml  docker-compose.supabase.yml
docs/: AGENT.md  ENVIRONMENT.md  QUICKSTART.md  README.md  VibesPro.code-workspace  branching.md  ci-optimization-summary.md  ci-optimization-verification.md  commit_message_guidelines.md  dev_adr.md  dev_devkit-integration-plan.md  dev_implementation_plan.md  dev_prd.md  dev_prd_ai_guidance.md  dev_sds.md  dev_sds_ai_guidance.md  dev_spec_index.md  dev_tdd.md  dev_tdd_ai_guidance.md  dev_tdd_observability.md  devkit-prompts-instructions-integration.md  environment_report.md  generator-first-integration-summary.md  generator_plan_review.md  generatorsTDD.md  ideation-insights.md  implementation-hybrid-context.md  mapping.md  nx-generators-guide.md  project_state.md  speckit_implementation_plan.md  techstack.schema copy.json  traceability_matrix.md  typing_summary.md  validation_failures_report.md  vibecoder_integration_plan.md  vscode_customization.md
generators/: AGENT.md
hooks/: AGENT.md  post_gen.py  pre_gen.py
libs/: AGENT.md
mcp/: tool_index.md
models/: README.md
mypy-report/: any-exprs.txt  types-of-anys.txt
ops/: AGENT.md
patches/: nx@22.0.2.patch
scripts/: AGENT.md  README.md  bundle-context.sh  check_all_agents.mjs  check_all_chatmodes.mjs  check_supabase_in_devbox.sh  ci-local.sh  cleanup-branches.sh  copier  copier.mjs  decrypt-ci-env.sh  devbox_boot.sh  devbox_overlay_autobump.sh  env-wrapper.sh  fetch_github_actions_logs.sh  fix_prompt_indentation.py  install_supabase.sh  just  nx-wrapper.sh  shell-profile.sh  track-binary-size.sh  validate-no-cycles.js  validate_supabase_overlay_pin.sh
supabase/: config.toml  seed.sql
templates/: AGENT.md  TEMPLATE_GUIDE.md
temporal_db/: AGENT.md  Cargo.toml  lib.rs  repository.rs
tests/: AGENT.md  conftest.py  test_docs_generator_integration.py
tools/: AGENT.md  check_agent_links.py  check_templates.py  package.json  validate-generator-quality.ts  validate-generator-schemas.ts  validate-templates.py
toolsets/: mcp.toolsets.jsonc
(+808 files in other folders)
