[build-system]
requires = [ "setuptools>=68.0", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "vibes-pro"
version = "0.6.0"
description = "HexDDD-VibePDK Merger: Generator-first platform"
requires-python = ">=3.11"
dependencies = [
  "copier>=9.0.0",
  "jinja2>=3.1.0",
  "logfire[fastapi,requests,httpx,sqlalchemy]>=4.14.2",
  "pyyaml>=6.0",
]

  [project.optional-dependencies]
  dev = [
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "psutil>=5.9.0",
  "fastapi>=0.120.1",
  "httpx>=0.28.1",
  "sqlalchemy>=2.0.0",
  "datamodel-code-generator>=0.14.0",
  "pydantic>=2.0.0"
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [ "tests/fixtures/**", "**/test-output/**", "**/*.j2" ]

  [tool.ruff.lint]
  select = [ "E", "F", "I", "N", "UP", "S" ]
  extend-select = [ "TID" ]
  ignore = [
  "E501",
  "S603",
  "S607",
  "S105",
  "S324",
  "S101",
  "TID251",
  "TID252"
]

    [tool.ruff.lint.flake8-tidy-imports]
    banned-module-level-imports = [ "structlog" ]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
extra_checks = true
exclude = [
  "tests/fixtures/",
  "test-output/",
  ".*\\.j2$",
  "templates/.*",
  "tmp/copier-inspect/.*",
  "tests/fixtures/.*",
  "tests/.*",
  "tools/temporal-db/.*",
  "tools/temporal_db/.*",
  "templates/tools/.*",
  "tmp/copier-inspect/.*",
  "tmp/copier-inspect-noai/.*",
  "tmp/copier-inspect-noai/.*",
  "^.*\\{\\{.*\\}\\}.*$",
  "target/.*",
  "scripts/",
  "libs/shared/types-py/.*",
  "apps/copier-smoke-example/.*"
]

  [[tool.mypy.overrides]]
  module = [ "prompt_optimizer.*", "my_test_domain.*" ]
  ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = [ "test_*.py", "*_test.py" ]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
norecursedirs = [
  "tmp",
  "tmp/*",
  "tmpdocs",
  "tmpdocs-html",
  "templates",
  "node_modules",
  ".venv",
  ".git",
  "target",
  "apps/copier-smoke-example"
]




[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "pre-commit>=4.0.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-copier>=0.4.1",
  "requests>=2.32.0",
  "ruff>=0.13.1",
  "psutil>=5.9.0",
  "fastapi>=0.120.1",
  "httpx>=0.28.1",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.0.0",
  "testcontainers>=4.10.0",
  "autopep8>=2.3.1",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1"
]
