[package]
name = "vibes-pro-temporal-db"
version = "0.1.0"
edition = "2021"
authors = ["VibesPro Team"]
description = "Temporal database for institutional memory in VibesPro"
license = "MPL-2.0"

[lib]
name = "vibes_pro"
path = "src/lib.rs"

[dependencies]
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
md5 = { workspace = true }

[dev-dependencies]
tempfile = "3.9"
