[package]
name = "arc-cli"
version = "0.1.0"
edition = "2021"
description = "CLI interface for ARC (Architectural Reasoning Companion) agent"

[[bin]]
name = "arc"
path = "src/main.rs"

[dependencies]
arc-core = { path = "../arc-core" }
arc-config = { path = "../arc-config" }
arc-planner = { path = "../arc-planner" }
arc-providers = { path = "../arc-providers" }
arc-ensembles = { path = "../arc-ensembles" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rustyline = "17.0.1"
dirs = "5.0"
tokio-util = "0.7"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29.0"
ratatui = "0.29"
termimad = "0.34.0"

[dev-dependencies]
tempfile = "3.8"
