[package]
name = "arc-planner"
version = "0.1.0"
edition = "2021"
description = "Fast-discovery planner for ARC agent"

[dependencies]
arc-providers = { path = "../arc-providers" }
arc-core = { path = "../arc-core" }
arc-config = { path = "../arc-config" }
serde = { workspace = true }
serde_json = { workspace = true }
const_format = "0.2"
anyhow = { workspace = true }
tokio = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.8"
