[package]
name = "temporal-ai"
version = "0.1.0"
edition = "2021"
authors = ["VibesPro Team"]
description = "Embedding-based pattern recommendation engine for Git commit history"
license = "MIT"

[lib]
name = "temporal_ai"
path = "src/lib.rs"

[[bin]]
name = "temporal-ai"
path = "src/bin/main.rs"

[dependencies]
# Embedding inference (TODO: Replace with candle or llama-cpp-rs)
# llm = "1.3"  # Wrong crate - this is an API wrapper

# Vector storage
redb = "2.2"

# Git integration
git2 = { version = "0.18", default-features = false, features = ["https"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"  # MessagePack for compact embedding storage

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1", features = ["rt", "macros", "fs"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# FFI bindings for TypeScript
napi = { version = "2", features = ["async"], optional = true }
napi-derive = { version = "2", optional = true }
glob = "0.3.3"

[dev-dependencies]
tempfile = "3.9"
criterion = "0.5"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
