[package]
name = "temporal-ai"
version = "0.1.0"
edition = "2021"
authors = ["VibesPro Team"]
description = "Embedding-based pattern recommendation engine for Git commit history"
license = "MIT"

[lib]
name = "temporal_ai"
path = "src/lib.rs"

[[bin]]
name = "temporal-ai"
path = "src/bin/main.rs"

[dependencies]
# Embedding inference
llama-cpp-2 = "0.1"

# Vector storage
redb = { workspace = true }

# Git integration - using vendored libgit2 with bundled OpenSSL alternative
git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.1"  # MessagePack for compact embedding storage

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Utilities
chrono = { workspace = true }
regex = "1.10"
sha2 = "0.10"
clap = { workspace = true }

# FFI bindings for TypeScript
napi = { version = "2", features = ["async"], optional = true }
napi-derive = { version = "2", optional = true }
glob = "0.3.3"
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3.9"
criterion = "0.5"
mockito = "1.2"
wiremock = "0.6"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
